--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ center
 {
     color: green;
     font-family: verdana;
-	font-size: 70px;
-	padding: 200px 0;
+    font-size: 70px;
+    padding: 200px;
 	
 }
