--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,13 @@
 	margin: 0;
 	padding 0;
 	font-family: sans-serif;
+	
 }
 
 #header{
+	position: relative;
 	height: 100vh;
-	background-image: url(images/background.jpg);
+	background-image: url(images/grid2.png);
 	background-position: center;
 	background-size: cover;
 }
